--- a/GameLog.Rmd
+++ b/GameLog.Rmd
@@ -2,7 +2,9 @@
 title: "GameLog"
 author: "Florian Brühlmann"
 date: "31. Mai 2016"
-output: html_document
+output: 
+  html_document: 
+    self_contained: no
 ---
 
 ### Datensatz einlesen
